@@ -287,6 +287,9 @@ New in v0.8.00 (2016/07/??)
   - Avoids comparing mix of short, long, or fingerprint size keys.
 * Patched in lp:~mterry/duplicity/rename-dep
   - Make rename command a dependency for LP build
+* Fixed bug #1654756 with new b2backend.py module from Vincent Rouille
+  - Faster (big files are uploaded in chunks)
+  - Added upload progress reporting support
 
 
 New in v0.7.08 (2016/07/02)
